--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,14 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i", rel="stylesheet")
+    link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
+    link(href="css/material.min.css", rel="stylesheet")
     link(href="css/main.min.css", type="text/css" rel="stylesheet")
   body
     
+    
+    script(src="js/jquery.min.js")
+    script(src="js/popper.js")
+    script(src="js/bootstrap.min.js")
+    script(src="js/material.min.css")
