--- a/views/index.pug
+++ b/views/index.pug
@@ -8,8 +8,7 @@ html(lang="es")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
     link(href="css/material.min.css", rel="stylesheet")
     link(href="css/main.min.css", type="text/css" rel="stylesheet")
-  body
-    
+  body VACIO
     
     script(src="js/jquery.min.js")
     script(src="js/popper.js")
